# Rust-Performance-Testing-as-a-Service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.builder  Dockerfile.debugger  Dockerfile.frontend  Dockerfile.master-debug  Dockerfile.master-release  Dockerfile.runner  Dockerfile.worker-debug  Dockerfile.worker-release  LICENSE  README.md
.github/workflows/: master.yml  rust.yml  worker.yml
Ansible/: Dockerfile  hosts  setup.yaml
Assets/: architecture.drawio
Backend/: Cargo.toml
Backend/master/: Cargo.toml
Backend/master/src/: main.rs
Backend/master/src/lib/: mod.rs
Backend/master/src/models/: mod.rs
Backend/shared/: Cargo.toml
Backend/shared/src/: lib.rs  manager.rs  plot.rs  redis_manager_mpsc.rs  zip.rs
Backend/shared/src/models/: mod.rs
Backend/src/: lib.rs  main.rs
Backend/src/lib/: mod.rs
Backend/src/models/: mod.rs
Backend/worker/: Cargo.toml
Backend/worker/src/: main.rs
Backend/worker/src/lib/: mod.rs  task.rs
Dockerfiles/: Docker-compose-helpers.yaml  Docker-compose-nginx.conf  Docker-compose.yaml  Dockerfile.builder  Dockerfile.builder.alpine  Dockerfile.debugger  Dockerfile.dev  Dockerfile.entrypoint  Dockerfile.frontend  Dockerfile.loadbalancer  Dockerfile.master-debug  Dockerfile.master-release  Dockerfile.master-release.alpine  Dockerfile.runner  Dockerfile.runner.alpine  Dockerfile.worker-debug  Dockerfile.worker-release  Dockerfile.worker-release.alpine  README.md  entrypoint-nginx.conf  frontend-nginx.conf  loadbalancer-nginx.conf  todo.txt
Dockerfiles/Alpine/: Dockerfile.builder.alpine  Dockerfile.master-release.alpine  Dockerfile.runner.alpine  Dockerfile.worker-release.alpine  README.md
Frontend/: package-lock.json  package.json  vue.config.js
Frontend/public/: dark.css  index.html  style.css
Frontend/src/: App.vue  main.js
Frontend/src/components/: Test.vue
Kubernetes/: configmap.yaml  curl-pod.yaml  frontend.yaml  ingress.yaml  istio.txt  master.yaml  pv-claim.yaml  pv-volume.yaml  redis.yaml  setup.txt  worker-1.yaml  worker-2.yaml  worker-loadbalancer.yaml
Kubernetes/WorkerCreator/: README.md  app.py  template.yaml
LoadBalancer/: README.md  app.py  load_balancer.py  server.py
LocustProject/: README.md
LocustProject/locust/: not-valid.py  valid.py  valid.py.json
Terraform/: docker.tf
Terraform/Docker/: .gitignore  entrypoint.tf  frontend.tf  helpers.tf  locals.tf  main.tf  master.tf  networks.tf  providers.tf  redis.tf  terraform.tfvars  workers.tf
Terraform/Microk8s/: main.tf  terraform.tfvars
src/: main.rs
(+19 files in other folders)
