[package]
name = "ptas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.29", features = ["multipart"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }