[package]
name = "ptas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.29", features = ["websocket", "multipart"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "fs"] }
futures-util = "0.3.17"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
parking_lot = "0.12.0"