[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
redis = { version = "0.21.5"}
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1.0.48"
csv = "1.1.6"
chrono = "0.4.22"