[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path = "../shared"}
poem = { version = "1.3.40", features = ["websocket", "multipart", "static-files"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "fs"] }
futures-util = "0.3.17"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
parking_lot = "0.12.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = "0.11.10"
regex = "1.5.6"

[dependencies.redis]
version = "0.21.5"